[gd_scene load_steps=5 format=3 uid="uid://dmt2fqbeoy23i"]

[ext_resource type="Script" uid="uid://jf5pgqqtdarw" path="res://scenes/LevelPreview/level_preview.gd" id="1_32s0m"]
[ext_resource type="PackedScene" uid="uid://dmtyx5x1hy1oh" path="res://scenes/text_button/text_button.tscn" id="1_o053m"]
[ext_resource type="Texture2D" uid="uid://bsiqmasius76x" path="res://assets/circuit-thumbnails/under_construction.png" id="3_5lo30"]
[ext_resource type="LabelSettings" uid="uid://d25n4716373ex" path="res://assets/LabelSettings.tres" id="4_7qyqg"]

[node name="LevelPreview" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_32s0m")
images = Array[Texture]([null])

[node name="LeftButton" parent="." instance=ExtResource("1_o053m")]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 300.0
offset_top = -32.5
offset_right = 333.0
offset_bottom = 32.5
grow_vertical = 2
text = "<"

[node name="RightButton" parent="." instance=ExtResource("1_o053m")]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -333.0
offset_top = -32.5
offset_right = -300.0
offset_bottom = 32.5
grow_horizontal = 0
grow_vertical = 2
text = ">"

[node name="Level" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -218.5
offset_top = -115.894
offset_right = 218.5
offset_bottom = 115.894
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_5lo30")
expand_mode = 5

[node name="LevelName" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -218.0
offset_top = 123.0
offset_right = 219.0
offset_bottom = 179.0
grow_horizontal = 2
grow_vertical = 2
text = "Drifting Cradle"
label_settings = ExtResource("4_7qyqg")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[connection signal="button_clicked" from="LeftButton" to="." method="_on_left_button_button_clicked"]
[connection signal="button_clicked" from="RightButton" to="." method="_on_right_button_button_clicked"]
